# work-twin

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  ruff.yml  test.yml
perceiver_service/src/: api.py  config.py  main.py  router.py
perceiver_service/src/alembic/: env.py
perceiver_service/src/alembic/versions/: 2026_05_13_2016-ad04a97fc516_correct_column_names.py  2026_05_22_1837-c3bd5a865e32_user_id_integration_unique_constaint_in_.py
perceiver_service/src/analyzer/: embeddings.py  exceptions.py
perceiver_service/src/core/: celery.py  celery_app.py  decorators.py
perceiver_service/src/core/const/errors/: base.py
perceiver_service/src/core/exception/: base.py  exception_handlers.py  factory.py  providers.py
perceiver_service/src/core/exceptions/: exception_handlers.py  providers.py
perceiver_service/src/core/factory/: base.py  exceptions.py  provider_factory.py
perceiver_service/src/core/providers/: base.py  exceptions.py  factory.py
perceiver_service/src/core/settings/: __init__.py  base.py
perceiver_service/src/database/: core.py  enums.py  mixins.py  types.py
perceiver_service/src/database/models/: __init__.py  dna.py  knowledge.py  user.py
perceiver_service/src/ingestion/: ingestion.py  schemas.py  services.py  tasks.py
perceiver_service/src/integrations/: enums.py  models.py  schemas.py  service.py
perceiver_service/src/integrations/exceptions/: __init__.py  auth.py
perceiver_service/src/integrations/telegram/: exceptions.py  providers.py  schemas.py
perceiver_service/src/knowledge/: enums.py  models.py
perceiver_service/src/middleware/: __init__.py  logging.py
perceiver_service/src/middlewares/: __init__.py
perceiver_service/src/personality_dna/: models.py  schemas.py  service.py  views.py
perceiver_service/src/twin/: models.py
perceiver_service/src/user/: enums.py  models.py  schemas.py  service.py
perceiver_service/tests/: conftest.py  test_config.py  test_router.py
perceiver_service/tests/analyzer/: test_embeddings.py  test_exceptions.py
perceiver_service/tests/core/exception/: test_exception_handlers.py  test_exceptions.py
perceiver_service/tests/core/exceptions/: test_exceptions.py
perceiver_service/tests/core/factory/: test_exceptions.py
perceiver_service/tests/database/: test_encrypted_types.py
perceiver_service/tests/ingestion/: conftest.py  schemas.py  test_concurrency.py  test_ingestion.py  test_ingestion_service.py  test_ingestion_tasks.py  test_schemas.py
perceiver_service/tests/integrations/: conftest.py  test_schemas.py  test_service.py
perceiver_service/tests/middleware/: test_logging.py
perceiver_service/tests/personality_dna/: conftest.py  test_schemas.py  test_service.py  test_views.py
perceiver_service/tests/unit/: test_exceptions.py  test_factory.py  test_schemas.py
perceiver_service/tests/user/: test_service.py
shared/: alembic.ini  config.py
shared/alembic/: env.py
shared/alembic/versions/: 2026_04_29_1858-5f17c3c709c6_create_user_integrations_personality_.py  2026_04_30_1650-c1f51803b156_encryping_fields_with_user_s_privacy_.py
shared/core/constants/: knowledge.py  user.py
shared/database/: core.py  types.py
shared/database/models/: dna.py  knowledge.py  user.py
(+9 files in other folders)
