[project]
name = "work-twin"
version = "0.1.0"
description = "WorkTwin is a 'Digital Twin' system that mimics your professional persona."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "cryptography>=47.0.0",
    "fastapi[standard]>=0.136.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.9",
    "pgvector>=0.3.6",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
    "telethon>=1.43.2",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff]
line-length=79
exclude = [
    ".venv"
]
indent-width=4

[tool.ruff.lint]
extend-select=["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = 72
